# template

./: .bashrc  .npmrc  .vimrc  CMakeLists.txt  README.md  package.json
include/: hello.h
src/: hello.cpp  main.cpp
